# AI-Space-Invaders

./: .gitignore  README.md  dynamic.py  game.py  global_vars.py  llm_tools.py  main.py  prev_functions.py
LeapProject/: CMakeLists.txt
LeapProject/src/: main.cpp
leap_motion/: leap_project_listener.py
leapmotion/cpp/LeapMotionTracker/: LeapMotionTracker.sln
leapmotion/cpp/LeapMotionTracker/LeapMotionTracker/: LeapMotionTracker.cpp  LeapMotionTracker.vcxproj  LeapMotionTracker.vcxproj.filters
leapmotion/cpp/LeapMotionTracker/LeapMotionTracker/x64/Debug/: LeapMotionTracker.exe.recipe  LeapMotionTracker.ilk  vc143.idb
leapmotion/cpp/LeapMotionTracker/LeapMotionTracker/x64/Debug/LeapMoti.8fc50051.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LeapMotionTracker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
llm/: add_function.py  api_call.py  dynamic.py  generate_function.py
llm/prompts/: system_prompt.txt  user_prompt.txt  user_prompt_boss.txt
real-time/: load_functions.py  manage_functions.py  write_function.py
real_time/: dynamic.py  manage_functions.py  seed.py
